--- a/src/libNetwork/CMakeLists.txt
+++ b/src/libNetwork/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library (Network Peer.cpp PeerStore.cpp PeerManager.cpp P2PComm.cpp)
+add_library (Network Peer.cpp PeerStore.cpp PeerManager.cpp P2PComm.cpp P2PGossip.cpp)
 target_include_directories (Network PUBLIC ${PROJECT_SOURCE_DIR}/src)
 target_link_libraries (Network PUBLIC Crypto Constants event)
